@@ -10,7 +10,12 @@
 package org.eclipse.sw360.rest.resourceserver.restdocs;
 
 import org.apache.thrift.TException;
+import org.eclipse.sw360.datahandler.common.SW360Constants;
 import org.eclipse.sw360.datahandler.common.SW360Utils;
+import org.eclipse.sw360.datahandler.resourcelists.PaginationOptions;
+import org.eclipse.sw360.datahandler.resourcelists.PaginationParameterException;
+import org.eclipse.sw360.datahandler.resourcelists.PaginationResult;
+import org.eclipse.sw360.datahandler.resourcelists.ResourceClassNotFoundException;
 import org.eclipse.sw360.datahandler.thrift.MainlineState;
 import org.eclipse.sw360.datahandler.thrift.ProjectReleaseRelationship;
 import org.eclipse.sw360.datahandler.thrift.ReleaseRelationship;
@@ -30,6 +35,8 @@ import org.eclipse.sw360.datahandler.thrift.components.ComponentType;
 import org.eclipse.sw360.datahandler.thrift.components.ECCStatus;
 import org.eclipse.sw360.datahandler.thrift.components.EccInformation;
 import org.eclipse.sw360.datahandler.thrift.components.Release;
+import org.eclipse.sw360.datahandler.thrift.components.ReleaseLinkJSON;
+import org.eclipse.sw360.datahandler.thrift.components.ComponentService;
 import org.eclipse.sw360.datahandler.thrift.licenseinfo.LicenseInfoFile;
 import org.eclipse.sw360.datahandler.thrift.licenseinfo.OutputFormatInfo;
 import org.eclipse.sw360.datahandler.thrift.licenseinfo.OutputFormatVariant;
@@ -38,6 +45,7 @@ import org.eclipse.sw360.datahandler.thrift.projects.Project;
 import org.eclipse.sw360.datahandler.thrift.projects.ProjectRelationship;
 import org.eclipse.sw360.datahandler.thrift.projects.ProjectState;
 import org.eclipse.sw360.datahandler.thrift.projects.ProjectType;
+import org.eclipse.sw360.datahandler.thrift.projects.ProjectService;
 import org.eclipse.sw360.datahandler.thrift.users.User;
 import org.eclipse.sw360.datahandler.thrift.vendors.Vendor;
 import org.eclipse.sw360.datahandler.thrift.vulnerabilities.ProjectVulnerabilityRating;
@@ -47,6 +55,9 @@ import org.eclipse.sw360.datahandler.thrift.vulnerabilities.VulnerabilityRatingF
 import org.eclipse.sw360.rest.resourceserver.Sw360ResourceServer;
 import org.eclipse.sw360.rest.resourceserver.TestHelper;
 import org.eclipse.sw360.rest.resourceserver.attachment.Sw360AttachmentService;
+import org.eclipse.sw360.rest.resourceserver.component.Sw360ComponentService;
+import org.eclipse.sw360.rest.resourceserver.core.HalResource;
+import org.eclipse.sw360.rest.resourceserver.core.RestControllerHelper;
 import org.eclipse.sw360.rest.resourceserver.licenseinfo.Sw360LicenseInfoService;
 import org.eclipse.sw360.rest.resourceserver.project.Sw360ProjectService;
 import org.eclipse.sw360.rest.resourceserver.release.Sw360ReleaseService;
@@ -56,6 +67,7 @@ import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -69,8 +81,11 @@ import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilde
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.SimpleDateFormat;
 import java.util.*;
 
@@ -79,12 +94,15 @@ import static org.eclipse.sw360.datahandler.thrift.MainlineState.OPEN;
 import static org.eclipse.sw360.datahandler.thrift.ReleaseRelationship.CONTAINED;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 import static org.springframework.restdocs.hypermedia.HypermediaDocumentation.linkWithRel;
 import static org.springframework.restdocs.hypermedia.HypermediaDocumentation.links;
 import static org.springframework.restdocs.mockmvc.RestDocumentationRequestBuilders.post;
 import static org.springframework.restdocs.payload.PayloadDocumentation.*;
+import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
 import static org.springframework.restdocs.request.RequestDocumentation.parameterWithName;
 import static org.springframework.restdocs.request.RequestDocumentation.requestParameters;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
@@ -120,13 +138,24 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
     @MockBean
     private Sw360VulnerabilityService vulnerabilityMockService;
 
+    @Mock
+    private RestControllerHelper restControllerHelper;
+
+    @Mock
+    private ComponentService.Iface componentServiceMock;
+    @Mock
+    private ProjectService.Iface projectClientMock;
+
+    @Mock
+    private Sw360ProjectService sw360ProjectService;
+
     private Project project;
     private Set<Project> projectList = new HashSet<>();
     private Attachment attachment;
 
 
     @Before
-    public void before() throws TException, IOException {
+    public void before() throws TException, IOException, ResourceClassNotFoundException, PaginationParameterException, URISyntaxException {
         Set<Attachment> attachmentList = new HashSet<>();
         List<EntityModel<Attachment>> attachmentResources = new ArrayList<>();
         attachment = new Attachment("1231231254", "spring-core-4.3.4.RELEASE.jar");
@@ -150,7 +179,6 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
         Mockito.doNothing().when(projectServiceMock).copyLinkedObligationsForClonedProject(any(), any(),
                 any());
 
-        Map<String, ProjectReleaseRelationship> linkedReleases = new HashMap<>();
         Map<String, ProjectProjectRelationship> linkedProjects = new HashMap<>();
         ProjectReleaseRelationship projectReleaseRelationship = new ProjectReleaseRelationship(CONTAINED, MAINLINE)
                 .setComment("Test Comment").setCreatedOn("2020-08-05").setCreatedBy("admin@sw360.org");
@@ -204,10 +232,9 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
         project.setSpecialRisks3rdParty("Lorem Ipsum");
         project.setDeliveryChannels("Lorem Ipsum");
         project.setRemarksAdditionalRequirements("Lorem Ipsum");
-        linkedReleases.put("3765276512", projectReleaseRelationship);
-        project.setReleaseIdToUsage(linkedReleases);
         linkedProjects.put("376570", new ProjectProjectRelationship(ProjectRelationship.CONTAINED).setEnableSvm(true));
         project.setLinkedProjects(linkedProjects);
+        project.setReleaseRelationNetwork("[{\"comment\":\"\",\"releaseLink\":[],\"createBy\":\"admin@sw360.org\",\"createOn\":\"2022-08-15\",\"mainlineState\":\"OPEN\",\"releaseId\":\"3765276512\",\"releaseRelationship\":\"CONTAINED\"}]");
         project.setAttachments(attachmentList);
         project.setSecurityResponsibles(new HashSet<>(Arrays.asList("securityresponsible1@sw360.org", "securityresponsible2@sw360.org")));
         project.setProjectResponsible("projectresponsible@sw360.org");
@@ -255,9 +282,6 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
         projExtKeys.put("mainline-id-project", "7657");
         projExtKeys.put("portal-id", "13319-XX3");
         project2.setExternalIds(projExtKeys);
-        linkedReleases = new HashMap<>();
-        linkedReleases.put("5578999", projectReleaseRelationship);
-        project2.setReleaseIdToUsage(linkedReleases);
         project2.setExternalIds(externalIds2);
         Map<String, String> externalURLs = new HashMap<>();
         externalURLs.put("homepage", "http://test_wiki_url.com");
@@ -267,6 +291,7 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
         project2.setClearingTeam("Unknown");
         project2.setContributors(new HashSet<>(Arrays.asList("admin@sw360.org", "jane@sw360.org")));
         project2.setClearingRequestId("CR-2");
+        project2.setReleaseRelationNetwork("[{\"comment\":\"\",\"releaseLink\":[],\"createBy\":\"admin@sw360.org\",\"createOn\":\"2022-08-15\",\"mainlineState\":\"OPEN\",\"releaseId\":\"5578999\",\"releaseRelationship\":\"CONTAINED\"}]");
 
         projectList.add(project2);
 
@@ -283,9 +308,8 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
         given(this.projectServiceMock.searchProjectByType(any(), any())).willReturn(new ArrayList<Project>(projectList));
         given(this.projectServiceMock.searchProjectByGroup(any(), any())).willReturn(new ArrayList<Project>(projectList));
         given(this.projectServiceMock.refineSearch(any(), any())).willReturn(projectListByName);
-        given(this.projectServiceMock.getReleaseIds(eq(project.getId()), any(), eq("false"))).willReturn(releaseIds);
-        given(this.projectServiceMock.getReleaseIds(eq(project.getId()), any(), eq("true"))).willReturn(releaseIdsTransitive);
-        given(this.projectServiceMock.updateProjectReleaseRelationship(any(), any(), any())).willReturn(projectReleaseRelationshipResponseBody);
+        given(this.projectClientMock.getProjectById(eq(project.getId()), any())).willReturn(project);
+        given(this.sw360ProjectService.getProjectForUserById(eq(project.getId()), any())).willReturn(project);
         given(this.projectServiceMock.convertToEmbeddedWithExternalIds(eq(project))).willReturn(
                 new Project("Emerald Web")
                         .setVersion("1.0.2")
@@ -300,16 +324,6 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                         .setDescription("Orange Web provides a suite of components for documentation.")
                         .setExternalIds(projExtKeys)
                         .setProjectType(ProjectType.PRODUCT));
-        when(this.projectServiceMock.createProject(any(), any())).then(invocation ->
-                new Project("Test Project")
-                        .setId("1234567890")
-                        .setDescription("This is the description of my Test Project")
-                        .setProjectType(ProjectType.PRODUCT)
-                        .setVersion("1.0")
-                        .setCreatedBy("admin@sw360.org")
-                        .setPhaseOutSince("2020-06-25")
-                        .setState(ProjectState.ACTIVE)
-                        .setCreatedOn(new SimpleDateFormat("yyyy-MM-dd").format(new Date())));
 
         Release release = new Release();
         release.setId("3765276512");
@@ -371,9 +385,11 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
         rel.setSoftwarePlatforms(new HashSet<>(Arrays.asList("Java SE", ".NET")));
         rel.setMainlineState(MainlineState.MAINLINE);
         rel.setVendor(new Vendor("TV", "Test Vendor", "http://testvendor.com"));
+        rel.setEccInformation(eccInformation);
 
         given(this.releaseServiceMock.getReleaseForUserById(eq(release.getId()), any())).willReturn(release);
         given(this.releaseServiceMock.getReleaseForUserById(eq(release2.getId()), any())).willReturn(release2);
+        given(this.componentServiceMock.getReleaseById(any(), any())).willReturn(release);
 
         given(this.userServiceMock.getUserByEmailOrExternalId("admin@sw360.org")).willReturn(
                 new User("admin@sw360.org", "sw360").setId("123456789"));
@@ -478,9 +494,30 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
         vulIdToRelIdToRatings.put("12345", relIdToprojVUlRating);
         vulIdToRelIdToRatings.put("23105", relIdToprojVUlRating1);
 
+        ReleaseLinkJSON releaseLinkJSON1 = new ReleaseLinkJSON();
+        releaseLinkJSON1.setReleaseId("3765276512");
+        releaseLinkJSON1.setComment("Test Comment");
+        releaseLinkJSON1.setReleaseLink(Collections.emptyList());
+        releaseLinkJSON1.setReleaseRelationship("CONTAINED");
+        releaseLinkJSON1.setMainlineState("MAINLINE");
+        releaseLinkJSON1.setCreateBy("admin@sw360.org");
+        ReleaseLinkJSON releaseLinkJSON2 = new ReleaseLinkJSON();
+        releaseLinkJSON2.setReleaseId("5578999");
+        releaseLinkJSON2.setComment("Test Comment");
+        releaseLinkJSON2.setReleaseLink(Collections.emptyList());
+        releaseLinkJSON2.setReleaseRelationship("CONTAINED");
+        releaseLinkJSON2.setMainlineState("MAINLINE");
+        releaseLinkJSON2.setCreateBy("admin@sw360.org");
+        List<ReleaseLinkJSON> releaseLinkJSONS = new ArrayList<>();
+        releaseLinkJSONS.add(releaseLinkJSON2);
+        releaseLinkJSONS.add(releaseLinkJSON1);
         given(this.vulnerabilityMockService.fillVulnerabilityMetadata(any(), any())).willReturn(vulIdToRelIdToRatings);
         given(this.vulnerabilityMockService.updateProjectVulnerabilityRating(any(), any())).willReturn(RequestStatus.SUCCESS);
-        given(this.projectServiceMock.getReleasesFromProjectIds(any(), any(), any(), any())).willReturn(Set.of(rel));
+        given(this.projectServiceMock.getReleasesInDependencyNetworkFromProjectIds(any(), any(), anyBoolean())).willReturn(releaseLinkJSONS);
+
+        given(this.projectServiceMock.getReleasesLinkDirectlyByProjectId(eq(project.getId()), any(), eq(false))).willReturn(Collections.singletonList(releaseLinkJSON1));
+        given(this.projectServiceMock.getReleasesLinkDirectlyByProjectId(eq(project.getId()), any(), eq(true))).willReturn(Collections.singletonList(releaseLinkJSON2));
+        given(this.projectServiceMock.getReleasesIdByProjectId(eq(project.getId()), any(), eq("false"))).willReturn(Collections.singleton("3765276512"));
     }
 
     @Test
@@ -505,10 +542,10 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 linkWithRel("last").description("Link to last page")
                         ),
                         responseFields(
-                                subsectionWithPath("_embedded.sw360:projects.[]name").description("The name of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]version").description("The project version"),
-                                subsectionWithPath("_embedded.sw360:projects.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]name").description("The name of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]version").description("The project version"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs").description("An array of <<resources-projects, Projects resources>>"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 fieldWithPath("page").description("Additional paging information"),
                                 fieldWithPath("page.size").description("Number of projects per page"),
@@ -587,48 +624,48 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 linkWithRel("last").description("Link to last page")
                         ),
                         responseFields(
-                                subsectionWithPath("_embedded.sw360:projects.[]name").description("The name of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]version").description("The project version"),
-                                subsectionWithPath("_embedded.sw360:projects.[]createdOn").description("The date the project was created"),
-                                subsectionWithPath("_embedded.sw360:projects.[]description").description("The project description"),
-                                subsectionWithPath("_embedded.sw360:projects.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("_embedded.sw360:projects.[]domain").description("The domain, possible values are:"  + Sw360ResourceServer.DOMAIN.toString()).optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
-                                subsectionWithPath("_embedded.sw360:projects.[]businessUnit").description("The business unit this project belongs to"),
-                                subsectionWithPath("_embedded.sw360:projects.[]externalIds").description("When projects are imported from other tools, the external ids can be stored here. Store as 'Single String' when single value, or 'Array of String' when multi-values"),
-                                subsectionWithPath("_embedded.sw360:projects.[]additionalData").description("A place to store additional data used by external tools").optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]ownerAccountingUnit").description("The owner accounting unit of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]ownerGroup").description("The owner group of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]ownerCountry").description("The owner country of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]obligationsText").description("The obligations text of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]clearingSummary").description("The clearing summary text of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]specialRisksOSS").description("The special risks OSS text of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]generalRisks3rdParty").description("The general risks 3rd party text of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]specialRisks3rdParty").description("The special risks 3rd party text of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]deliveryChannels").description("The sales and delivery channels text of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]remarksAdditionalRequirements").description("The remark additional requirements text of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]tag").description("The project tag"),
-                                subsectionWithPath("_embedded.sw360:projects.[]deliveryStart").description("The project delivery start date"),
-                                subsectionWithPath("_embedded.sw360:projects.[]preevaluationDeadline").description("The project preevaluation deadline"),
-                                subsectionWithPath("_embedded.sw360:projects.[]systemTestStart").description("Date of the project system begin phase"),
-                                subsectionWithPath("_embedded.sw360:projects.[]systemTestEnd").description("Date of the project system end phase"),
-                                subsectionWithPath("_embedded.sw360:projects.[]linkedProjects").description("The relationship between linked projects of the project").optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]linkedReleases").description("The relationship between linked releases of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]securityResponsibles").description("An array of users responsible for security of the project."),
-                                subsectionWithPath("_embedded.sw360:projects.[]projectResponsible").description("A user who is responsible for the project."),
-                                subsectionWithPath("_embedded.sw360:projects.[]enableSvm").description("Security vulnerability monitoring flag"),
-                                subsectionWithPath("_embedded.sw360:projects.[]enableVulnerabilitiesDisplay").description("Displaying vulnerabilities flag."),
-                                subsectionWithPath("_embedded.sw360:projects.[]state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
-                                subsectionWithPath("_embedded.sw360:projects.[]phaseOutSince").description("The project phase-out date"),
-                                subsectionWithPath("_embedded.sw360:projects.[]clearingRequestId").description("Clearing Request id associated with project."),
-                                subsectionWithPath("_embedded.sw360:projects.[]_links").description("Self <<resources-index-links,Links>> to Project resource"),
-                                subsectionWithPath("_embedded.sw360:projects.[]_embedded.createdBy").description("The user who created this project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]_embedded.clearingTeam").description("The clearingTeam of the project").optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]_embedded.homepage").description("The homepage url of the project").optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]_embedded.wiki").description("The wiki url of the project").optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]_embedded.sw360:moderators").description("An array of all project moderators with email").optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]_embedded.sw360:contributors").description("An array of all project contributors with email").optional(),
-                                subsectionWithPath("_embedded.sw360:projects.[]_embedded.sw360:attachments").description("An array of all project attachments").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]name").description("The name of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]version").description("The project version"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]createdOn").description("The date the project was created"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]description").description("The project description"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]domain").description("The domain, possible values are:"  + Sw360ResourceServer.DOMAIN.toString()).optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]businessUnit").description("The business unit this project belongs to"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]externalIds").description("When projects are imported from other tools, the external ids can be stored here. Store as 'Single String' when single value, or 'Array of String' when multi-values"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]additionalData").description("A place to store additional data used by external tools").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]ownerAccountingUnit").description("The owner accounting unit of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]ownerGroup").description("The owner group of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]ownerCountry").description("The owner country of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]obligationsText").description("The obligations text of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]clearingSummary").description("The clearing summary text of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]specialRisksOSS").description("The special risks OSS text of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]generalRisks3rdParty").description("The general risks 3rd party text of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]specialRisks3rdParty").description("The special risks 3rd party text of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]deliveryChannels").description("The sales and delivery channels text of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]remarksAdditionalRequirements").description("The remark additional requirements text of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]tag").description("The project tag"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]deliveryStart").description("The project delivery start date"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]preevaluationDeadline").description("The project preevaluation deadline"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]systemTestStart").description("Date of the project system begin phase"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]systemTestEnd").description("Date of the project system end phase"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]linkedProjects").description("The relationship between linked projects of the project").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]securityResponsibles").description("An array of users responsible for security of the project."),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]projectResponsible").description("A user who is responsible for the project."),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]enableSvm").description("Security vulnerability monitoring flag"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]enableVulnerabilitiesDisplay").description("Displaying vulnerabilities flag."),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]phaseOutSince").description("The project phase-out date"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]clearingRequestId").description("Clearing Request id associated with project."),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_links").description("Self <<resources-index-links,Links>> to Project resource"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_embedded.createdBy").description("The user who created this project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_embedded.clearingTeam").description("The clearingTeam of the project").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_embedded.homepage").description("The homepage url of the project").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_embedded.wiki").description("The wiki url of the project").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_embedded.sw360:moderators").description("An array of all project moderators with email").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_embedded.sw360:contributors").description("An array of all project contributors with email").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]_embedded.sw360:attachments").description("An array of all project attachments").optional(),
+                                subsectionWithPath("_embedded.sw360:projectDTOes.[]dependencyNetwork").description("An array of all project attachments").optional(),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 fieldWithPath("page").description("Additional paging information"),
                                 fieldWithPath("page.size").description("Number of projects per page"),
@@ -676,7 +713,6 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("systemTestStart").description("Date of the project system begin phase"),
                                 fieldWithPath("systemTestEnd").description("Date of the project system end phase"),
                                 subsectionWithPath("linkedProjects").description("The `linked project id` - metadata of linked projects (`enableSvm` - whether linked projects will be part of SVM, `projectRelationship` - relationship between linked project and the project. Possible values: " + Arrays.asList(ProjectRelationship.values())),
-                                subsectionWithPath("linkedReleases").description("The relationship between linked releases of the project"),
                                 fieldWithPath("securityResponsibles").description("An array of users responsible for security of the project."),
                                 fieldWithPath("projectResponsible").description("A user who is responsible for the project."),
                                 fieldWithPath("enableSvm").description("Security vulnerability monitoring flag"),
@@ -684,10 +720,10 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
                                 fieldWithPath("phaseOutSince").description("The project phase-out date"),
                                 fieldWithPath("clearingRequestId").description("Clearing Request id associated with project."),
+                                subsectionWithPath("dependencyNetwork").description("Dependency network of project with release."),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
-                                subsectionWithPath("_embedded.createdBy").description("The user who created this project"),
-                                subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
-                                subsectionWithPath("_embedded.sw360:releases").description("An array of <<resources-releases, Releases resources>>"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs").description("An array of <<resources-projects, Projects resources>>"),
+                                subsectionWithPath("_embedded.createdBy").description("An array of create by"),
                                 subsectionWithPath("_embedded.sw360:moderators").description("An array of all project moderators with email and link to their <<resources-user-get,User resource>>"),
                                 subsectionWithPath("_embedded.sw360:attachments").description("An array of all project attachments and link to their <<resources-attachment-get,Attachment resource>>")
                         )));
@@ -717,13 +753,13 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 linkWithRel("last").description("Link to last page")
                         ),
                         responseFields(
-                                subsectionWithPath("_embedded.sw360:projects.[]name").description("The name of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]version").description("The project version"),
-                                subsectionWithPath("_embedded.sw360:projects.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("_embedded.sw360:projects.[]visibility")
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]name").description("The name of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]version").description("The project version"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]visibility")
                                         .description("The visibility of the project, possible values are: "
                                                 + Arrays.asList(Visibility.values())),
-                                subsectionWithPath("_embedded.sw360:projects")
+                                subsectionWithPath("_embedded.sw360:projectDTOs")
                                         .description("An array of <<resources-projects, Projects resources>>"),
                                 subsectionWithPath("_links")
                                         .description("<<resources-index-links,Links>> to other resources"),
@@ -759,11 +795,11 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 linkWithRel("last").description("Link to last page")
                         ),
                         responseFields(
-                                subsectionWithPath("_embedded.sw360:projects[]name").description("The name of the project"),
-                                subsectionWithPath("_embedded.sw360:projects[]version").description("The project version"),
-                                subsectionWithPath("_embedded.sw360:projects[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("_embedded.sw360:projects[]visibility").description("The visibility of the project, possible values are: " + Arrays.asList(Visibility.values())),
-                                subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs[]name").description("The name of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs[]version").description("The project version"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs[]visibility").description("The visibility of the project, possible values are: " + Arrays.asList(Visibility.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs").description("An array of <<resources-projects, Projects resources>>"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 fieldWithPath("page").description("Additional paging information"),
                                 fieldWithPath("page.size").description("Number of projects per page"),
@@ -797,11 +833,11 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 linkWithRel("last").description("Link to last page")
                         ),
                         responseFields(
-                                subsectionWithPath("_embedded.sw360:projects.[]name").description("The name of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]version").description("The project version"),
-                                subsectionWithPath("_embedded.sw360:projects.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("_embedded.sw360:projects[]visibility").description("The visibility of the project, possible values are: " + Arrays.asList(Visibility.values())),
-                                subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]name").description("The name of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]version").description("The project version"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs[]visibility").description("The visibility of the project, possible values are: " + Arrays.asList(Visibility.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs").description("An array of <<resources-projects, Projects resources>>"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 fieldWithPath("page").description("Additional paging information"),
                                 fieldWithPath("page.size").description("Number of projects per page"),
@@ -835,11 +871,11 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 linkWithRel("last").description("Link to last page")
                         ),
                         responseFields(
-                                subsectionWithPath("_embedded.sw360:projects.[]name").description("The name of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]version").description("The project version"),
-                                subsectionWithPath("_embedded.sw360:projects.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("_embedded.sw360:projects.[]visibility").description("The visibility of the project, possible values are: "+ Arrays.asList(Visibility.values())),
-                                subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]name").description("The name of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]version").description("The project version"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]visibility").description("The visibility of the project, possible values are: "+ Arrays.asList(Visibility.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs").description("An array of <<resources-projects, Projects resources>>"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 fieldWithPath("page").description("Additional paging information"),
                                 fieldWithPath("page.size").description("Number of projects per page"),
@@ -881,11 +917,11 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 linkWithRel("last").description("Link to last page")
                         ),
                         responseFields(
-                                subsectionWithPath("_embedded.sw360:projects.[]name").description("The name of the project"),
-                                subsectionWithPath("_embedded.sw360:projects.[]version").description("The project version"),
-                                subsectionWithPath("_embedded.sw360:projects.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("_embedded.sw360:projects.[]visibility").description("The visibility of the project, possible values are: "+ Arrays.asList(Visibility.values())),
-                                subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]name").description("The name of the project"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]version").description("The project version"),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs.[]visibility").description("The visibility of the project, possible values are: "+ Arrays.asList(Visibility.values())),
+                                subsectionWithPath("_embedded.sw360:projectDTOs").description("An array of <<resources-projects, Projects resources>>"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 fieldWithPath("page").description("Additional paging information"),
                                 fieldWithPath("page.size").description("Number of projects per page"),
@@ -1152,15 +1188,35 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
 
     @Test
     public void should_document_create_project() throws Exception {
+        String currentDate = new SimpleDateFormat("yyyy-MM-dd").format(new Date());
+        when(this.projectServiceMock.createProject(any(), any())).
+                thenReturn(
+                        new Project("Test Project")
+                                .setId("1234567890")
+                                .setDescription("This is the description of my Test Project")
+                                .setProjectType(ProjectType.PRODUCT)
+                                .setVersion("1.0")
+                                .setCreatedBy("admin@sw360.org")
+                                .setPhaseOutSince("2020-06-25")
+                                .setState(ProjectState.ACTIVE)
+                                .setReleaseRelationNetwork("[{\"comment\":\"Test Comment\",\"releaseLink\":[],\"createBy\":\"admin@sw360.org\",\"createOn\":\"" + currentDate + "\",\"mainlineState\":\"OPEN\",\"releaseId\":\"3765276512\",\"releaseRelationship\":\"CONTAINED\"}]")
+                                .setCreatedOn(new SimpleDateFormat("yyyy-MM-dd").format(new Date())));
         Map<String, Object> project = new HashMap<>();
         project.put("name", "Test Project");
         project.put("version", "1.0");
         project.put("visibility", "PRIVATE");
         project.put("description", "This is the description of my Test Project");
         project.put("projectType", ProjectType.PRODUCT.toString());
-        Map<String, ProjectReleaseRelationship> releaseIdToUsage = new HashMap<>();
-        releaseIdToUsage.put("3765276512", new ProjectReleaseRelationship(CONTAINED, OPEN));
-        project.put("linkedReleases", releaseIdToUsage);
+        List<Map<String, Object>> dependencyNetwork = new ArrayList<>();
+        Map<String, Object> releaseLinkJson = new HashMap<>();
+        releaseLinkJson.put("releaseId", "3765276512");
+        releaseLinkJson.put("comment", "Test Comment");
+        releaseLinkJson.put("releaseRelationship", "CONTAINED");
+        releaseLinkJson.put("mainlineState", "MAINLINE");
+        releaseLinkJson.put("createBy", "admin@sw360.org");
+
+        dependencyNetwork.add(releaseLinkJson);
+        project.put("dependencyNetwork", dependencyNetwork);
         Map<String, ProjectProjectRelationship> linkedProjects = new HashMap<>();
         linkedProjects.put("376576", new ProjectProjectRelationship(ProjectRelationship.CONTAINED).setEnableSvm(true));
         project.put("linkedProjects", linkedProjects);
@@ -1184,13 +1240,13 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("version").description("The version of the new project"),
                                 fieldWithPath("visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
                                 fieldWithPath("projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("linkedReleases").description("The relationship between linked releases of the project"),
                                 subsectionWithPath("linkedProjects").description("The `linked project id` - metadata of linked projects (`enableSvm` - whether linked projects will be part of SVM, `projectRelationship` - relationship between linked project and the project. Possible values: " + Arrays.asList(ProjectRelationship.values())),
                                 fieldWithPath("leadArchitect").description("The lead architect of the project"),
                                 fieldWithPath("contributors").description("An array of contributors to the project"),
                                 fieldWithPath("moderators").description("An array of moderators"),
                                 fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
-                                fieldWithPath("phaseOutSince").description("The project phase-out date")
+                                fieldWithPath("phaseOutSince").description("The project phase-out date"),
+                                subsectionWithPath("dependencyNetwork").description("Dependency network")
                         ),
                         responseFields(
                                 fieldWithPath("name").description("The name of the project"),
@@ -1204,21 +1260,33 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("enableVulnerabilitiesDisplay").description("Displaying vulnerabilities flag."),
                                 fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
                                 fieldWithPath("phaseOutSince").description("The project phase-out date"),
+                                fieldWithPath("releaseRelationNetwork").description("Release and project dependency network"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 subsectionWithPath("_embedded.createdBy").description("The user who created this project")
                         )));
     }
+
     @Test
     public void should_document_create_duplicate_project() throws Exception {
+        when(this.projectServiceMock.createProject(any(), any())).
+                thenReturn(
+                        new Project("Test Project")
+                                .setId("1234567890")
+                                .setDescription("This is the description of my Test Project")
+                                .setProjectType(ProjectType.PRODUCT)
+                                .setVersion("1.0")
+                                .setCreatedBy("admin@sw360.org")
+                                .setPhaseOutSince("2020-06-25")
+                                .setState(ProjectState.ACTIVE)
+                                .setReleaseRelationNetwork("[{\"comment\":\"\",\"releaseLink\":[],\"createBy\":\"admin@sw360.org\",\"createOn\":\"2022-08-15\",\"mainlineState\":\"OPEN\",\"releaseId\":\"3765276512\",\"releaseRelationship\":\"CONTAINED\"}]")
+                                .setCreatedOn(new SimpleDateFormat("yyyy-MM-dd").format(new Date())));
+
         Map<String, Object> projectReqs = new HashMap<>();
         projectReqs.put("name", "Test Project");
         projectReqs.put("version", "1.0");
         projectReqs.put("visibility", "PRIVATE");
         projectReqs.put("description", "This is the description of my Test Project");
         projectReqs.put("projectType", ProjectType.PRODUCT.toString());
-        Map<String, ProjectReleaseRelationship> releaseIdToUsage = new HashMap<>();
-        releaseIdToUsage.put("3765276512", new ProjectReleaseRelationship(CONTAINED, OPEN));
-        projectReqs.put("linkedReleases", releaseIdToUsage);
         Map<String, ProjectProjectRelationship> linkedProjects = new HashMap<>();
         linkedProjects.put("376576", new ProjectProjectRelationship(ProjectRelationship.CONTAINED).setEnableSvm(true));
         projectReqs.put("linkedProjects", linkedProjects);
@@ -1242,7 +1310,6 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("version").description("The version of the new project"),
                                 fieldWithPath("visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
                                 fieldWithPath("projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
-                                subsectionWithPath("linkedReleases").description("The relationship between linked releases of the project"),
                                 subsectionWithPath("linkedProjects").description("The `linked project id` - metadata of linked projects (`enableSvm` - whether linked projects will be part of SVM, `projectRelationship` - relationship between linked project and the project. Possible values: " + Arrays.asList(ProjectRelationship.values())),
                                 fieldWithPath("leadArchitect").description("The lead architect of the project"),
                                 fieldWithPath("contributors").description("An array of contributors to the project"),
@@ -1262,6 +1329,7 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("enableVulnerabilitiesDisplay").description("Displaying vulnerabilities flag."),
                                 fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
                                 fieldWithPath("phaseOutSince").description("The project phase-out date"),
+                                fieldWithPath("releaseRelationNetwork").description("releaseRelationNetwork"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                 subsectionWithPath("_embedded.createdBy").description("The user who created this project")
                         )));
@@ -1337,8 +1405,6 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                         fieldWithPath("phaseOutSince").description("The project phase-out date"),
                         subsectionWithPath("linkedProjects")
                                 .description("The `linked project id` - metadata of linked projects (`enableSvm` - whether linked projects will be part of SVM, `projectRelationship` - relationship between linked project and the project. Possible values: " + Arrays.asList(ProjectRelationship.values())),
-                        subsectionWithPath("linkedReleases")
-                                .description("The relationship between linked releases of the project"),
                         fieldWithPath("securityResponsibles").description("An array of users responsible for security of the project."),
                         fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
                         fieldWithPath("clearingRequestId").description("Clearing Request id associated with project."),
@@ -1347,9 +1413,9 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                         subsectionWithPath("_embedded.createdBy").description("The user who created this project"),
                         fieldWithPath("enableSvm").description("Security vulnerability monitoring flag"),
                         fieldWithPath("enableVulnerabilitiesDisplay").description("Displaying vulnerabilities flag."),
+                        fieldWithPath("releaseRelationNetwork").description("Release relation network"),
                         subsectionWithPath("_embedded.sw360:moderators").description("An array of moderators"),
                         subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
-                        subsectionWithPath("_embedded.sw360:releases").description("An array of <<resources-releases, Releases resources>>"),
                         subsectionWithPath("_embedded.sw360:attachments").description("An array of all project attachments and link to their <<resources-attachment-get,Attachment resource>>"))));
     }
 
@@ -1361,50 +1427,7 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
     @Test
     public void should_document_link_releases() throws Exception {
         MockHttpServletRequestBuilder requestBuilder = post("/api/projects/" + project.getId() + "/releases");
-        add_patch_releases(requestBuilder);
-    }
-
-    @Test
-    public void should_document_link_releases_with_project_release_relation() throws Exception {
-        MockHttpServletRequestBuilder requestBuilder = post("/api/projects/" + project.getId() + "/releases");
-        add_patch_releases_with_project_release_relation(requestBuilder);
-    }
-
-    @Test
-    public void should_document_patch_releases() throws Exception {
-        MockHttpServletRequestBuilder requestBuilder = patch("/api/projects/" + project.getId() + "/releases");
-        add_patch_releases(requestBuilder);
-    }
-
-    @Test
-    public void should_document_patch_releases_with_project_release_relation() throws Exception {
-        MockHttpServletRequestBuilder requestBuilder = patch("/api/projects/" + project.getId() + "/releases");
-        add_patch_releases_with_project_release_relation(requestBuilder);
-    }
-
-    @Test
-    public void should_document_update_project_release_relationship() throws Exception {
-        ProjectReleaseRelationship updateProjectReleaseRelationship = new ProjectReleaseRelationship()
-                .setComment("Test Comment").setMainlineState(MainlineState.SPECIFIC)
-                .setReleaseRelation(ReleaseRelationship.STANDALONE);
-        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
-        this.mockMvc
-                .perform(patch("/api/projects/376576/release/3765276512").contentType(MediaTypes.HAL_JSON)
-                        .content(this.objectMapper.writeValueAsString(updateProjectReleaseRelationship))
-                        .header("Authorization", "Bearer " + accessToken).accept(MediaTypes.HAL_JSON))
-                .andExpect(status().isOk())
-                .andDo(this.documentationHandler.document(
-                requestFields(
-                        fieldWithPath("releaseRelation").description("The relation of linked release. Possible Values are: "+Arrays.asList(ReleaseRelationship.values())),
-                        fieldWithPath("mainlineState").description("The mainlineState of linked release. Possible Values are: "+Arrays.asList(MainlineState.values())),
-                        fieldWithPath("comment").description("The Comment for linked release")),
-                responseFields(
-                        fieldWithPath("releaseRelation").description("The relation of linked release. Possible Values are: "+Arrays.asList(ReleaseRelationship.values())),
-                        fieldWithPath("mainlineState").description("The mainlineState of linked release. Possible Values are: "+Arrays.asList(MainlineState.values())),
-                        fieldWithPath("comment").description("The Comment for linked release"),
-                        fieldWithPath("createdOn").description("The date when release was linked to project"),
-                        fieldWithPath("createdBy").description("The email of user who linked release to project")
-                )));
+        add_releases(requestBuilder);
     }
 
     @Test
@@ -1462,16 +1485,7 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                                      subsectionWithPath("_embedded.sw360:releases.[]clearingState").description("The clearing of the release, possible values are " + Arrays.asList(ClearingState.values())),
                                      subsectionWithPath("_embedded.sw360:releases.[]releaseDate").description("The date of this release"),
                                      subsectionWithPath("_embedded.sw360:releases.[]createdOn").description("The creation date of the internal sw360 release"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]mainlineState").description("the mainline state of the release, possible values are: " + Arrays.asList(MainlineState.values())),
-                                     subsectionWithPath("_embedded.sw360:releases.[]sourceCodeDownloadurl").description("the source code download url of the release"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]binaryDownloadurl").description("the binary download url of the release"),
                                      subsectionWithPath("_embedded.sw360:releases.[]externalIds").description("When releases are imported from other tools, the external ids can be stored here. Store as 'Single String' when single value, or 'Array of String' when multi-values"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]additionalData").description("A place to store additional data used by external tools"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]languages").description("The language of the component"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]mainLicenseIds").description("An array of all main licenses"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]operatingSystems").description("The OS on which the release operates"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]softwarePlatforms").description("The software platforms of the component"),
-                                     subsectionWithPath("_embedded.sw360:releases.[]vendor").description("The Id of the vendor"),
                                      subsectionWithPath("_embedded.sw360:releases.[]_links").description("<<resources-release-get,Release>> to release resource"),
                                      subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
                                      fieldWithPath("page").description("Additional paging information"),
@@ -1491,29 +1505,259 @@ public class ProjectSpecTest extends TestRestDocsSpecBase {
                 .accept(MediaTypes.HAL_JSON))
                 .andExpect(status().isOk());
     }
+    @Test
+    public void should_document_get_project_network() throws Exception {
+        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
+        mockMvc.perform(get("/api/projects/network/" + project.getId())
+                        .header("Authorization", "Bearer " + accessToken)
+                        .accept(MediaTypes.HAL_JSON))
+                .andExpect(status().isOk())
+                .andDo(this.documentationHandler.document(
+                        links(
+                                linkWithRel("self").description("The <<resources-projects,Projects resource>>")
+                        ),
+                        responseFields(
+                                fieldWithPath("name").description("The name of the project"),
+                                fieldWithPath("version").description("The project version"),
+                                subsectionWithPath("dependencyNetwork").description("Dependency network of project with release."),
+                                subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources")
+                        )
+                ));
+    }
 
-    private void add_patch_releases(MockHttpServletRequestBuilder requestBuilder) throws Exception {
+    @Test
+    public void should_document_create_project_with_readable_format() throws Exception {
+        String currentDate = new SimpleDateFormat("yyyy-MM-dd").format(new Date());
+        when(this.projectServiceMock.createProject(any(), any())).
+                thenReturn(
+                        new Project("Test Project")
+                                .setId("111111111")
+                                .setDescription("This is the description of my Test Project")
+                                .setProjectType(ProjectType.PRODUCT)
+                                .setVersion("1.0")
+                                .setCreatedBy("admin@sw360.org")
+                                .setPhaseOutSince("2020-06-25")
+                                .setState(ProjectState.ACTIVE)
+                                .setReleaseRelationNetwork("[\n" +
+                                        "  {\n" +
+                                        "    \"releaseId\": \"3765276512\",\n" +
+                                        "    \"releaseLink\": [\n" +
+                                        "      {\n" +
+                                        "        \"releaseId\": \"5578999\",\n" +
+                                        "        \"releaseLink\": [],\n" +
+                                        "        \"releaseRelationship\": \"CONTAINED\",\n" +
+                                        "        \"mainlineState\": \"MAINLINE\",\n" +
+                                        "        \"comment\": \"Test Comment\",\n" +
+                                        "        \"createOn\": \"" + currentDate + "\",\n" +
+                                        "        \"createBy\": \"admin@sw360.org\"\n" +
+                                        "      }\n" +
+                                        "    ],\n" +
+                                        "    \"releaseRelationship\": \"CONTAINED\",\n" +
+                                        "    \"mainlineState\": \"MAINLINE\",\n" +
+                                        "    \"comment\": \"Test Comment\",\n" +
+                                        "    \"createOn\": \"" + currentDate + "\",\n" +
+                                        "    \"createBy\": \"admin@sw360.org\"\n" +
+                                        "  }\n" +
+                                        "]")
+                                .setCreatedOn(currentDate));
+        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
+        Map<String, Object> project = new HashMap<>();
+        project.put("name", "Test Project");
+        project.put("version", "1.0");
+        project.put("visibility", "PRIVATE");
+        project.put("description", "This is the description of my Test Project");
+        project.put("projectType", ProjectType.PRODUCT.toString());
+
+        List<Map<String, Object>> dependencyNetwork = new ArrayList<>();
+
+        List<Map<String, String>> subLinkedRelease = new ArrayList<>();
+        subLinkedRelease.add(Collections.singletonMap("releaseId", "5578999"));
+
+        Map<String, Object> releaseLinkJson = new HashMap<>();
+        releaseLinkJson.put("releaseId", "3765276512");
+        releaseLinkJson.put("comment", "Test Comment");
+        releaseLinkJson.put("releaseRelationship", "CONTAINED");
+        releaseLinkJson.put("mainlineState", "MAINLINE");
+        releaseLinkJson.put("createBy", "admin@sw360.org");
+        releaseLinkJson.put("createOn", "2022-09-12");
+        releaseLinkJson.put("releaseLink", subLinkedRelease);
+
+        Map<String, Object> subReleaseLinkJson = new HashMap<>();
+        subReleaseLinkJson.put("releaseId", "5578999");
+        subReleaseLinkJson.put("comment", "Test Comment");
+        subReleaseLinkJson.put("releaseRelationship", "CONTAINED");
+        subReleaseLinkJson.put("mainlineState", "MAINLINE");
+        subReleaseLinkJson.put("createBy", "admin@sw360.org");
+        subReleaseLinkJson.put("createOn", "2022-09-12");
+        subReleaseLinkJson.put("releaseLink", Collections.emptyList());
+
+
+        dependencyNetwork.add(releaseLinkJson);
+        dependencyNetwork.add(subReleaseLinkJson);
+        project.put("dependencyNetwork", dependencyNetwork);
+
+        Map<String, ProjectProjectRelationship> linkedProjects = new HashMap<>();
+        linkedProjects.put("376576", new ProjectProjectRelationship(ProjectRelationship.CONTAINED).setEnableSvm(true));
+        project.put("linkedProjects", linkedProjects);
+        project.put("leadArchitect", "lead@sw360.org");
+        project.put("moderators", new HashSet<>(Arrays.asList("moderator1@sw360.org", "moderator2@sw360.org")));
+        project.put("contributors", new HashSet<>(Arrays.asList("contributor1@sw360.org", "contributor2@sw360.org")));
+        project.put("state", ProjectState.ACTIVE.toString());
+        project.put("phaseOutSince", "2020-06-24");
+
+        this.mockMvc.perform(post("/api/projects/readableFormat")
+                        .contentType(MediaTypes.HAL_JSON)
+                        .content(this.objectMapper.writeValueAsString(project))
+                        .header("Authorization", "Bearer " + accessToken))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("_embedded.createdBy.email", Matchers.is("admin@sw360.org")))
+                .andDo(this.documentationHandler.document(
+                        requestFields(
+                                fieldWithPath("name").description("The name of the project"),
+                                fieldWithPath("description").description("The project description"),
+                                fieldWithPath("version").description("The version of the new project"),
+                                fieldWithPath("visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
+                                fieldWithPath("projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                subsectionWithPath("linkedProjects").description("The `linked project id` - metadata of linked projects (`enableSvm` - whether linked projects will be part of SVM, `projectRelationship` - relationship between linked project and the project. Possible values: " + Arrays.asList(ProjectRelationship.values())),
+                                fieldWithPath("leadArchitect").description("The lead architect of the project"),
+                                fieldWithPath("contributors").description("An array of contributors to the project"),
+                                fieldWithPath("moderators").description("An array of moderators"),
+                                fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
+                                fieldWithPath("phaseOutSince").description("The project phase-out date"),
+                                subsectionWithPath("dependencyNetwork").description("Dependency network")
+                        ),
+                        responseFields(
+                                fieldWithPath("name").description("The name of the project"),
+                                fieldWithPath("version").description("The project version"),
+                                fieldWithPath("visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
+                                fieldWithPath("createdOn").description("The date the project was created"),
+                                fieldWithPath("description").description("The project description"),
+                                fieldWithPath("projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                fieldWithPath("securityResponsibles").description("An array of users responsible for security of the project."),
+                                fieldWithPath("enableSvm").description("Security vulnerability monitoring flag"),
+                                fieldWithPath("enableVulnerabilitiesDisplay").description("Displaying vulnerabilities flag."),
+                                fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
+                                fieldWithPath("phaseOutSince").description("The project phase-out date"),
+                                subsectionWithPath("dependencyNetwork").description("Release and project dependency network"),
+                                subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
+                                subsectionWithPath("_embedded.createdBy").description("The user who created this project")
+                        )));
+    }
+
+    @Test
+    public void should_document_update_project_with_readable_format() throws Exception {
+        String currentDate = new SimpleDateFormat("yyyy-MM-dd").format(new Date());
+        given(this.projectServiceMock.getProjectForUserById(eq("111111111"), any())).willReturn(
+                new Project("Test Project")
+                        .setId("111111111")
+                        .setDescription("This is the description of my Test Project")
+                        .setProjectType(ProjectType.PRODUCT)
+                        .setVersion("1.0")
+                        .setCreatedBy("admin@sw360.org")
+                        .setPhaseOutSince("2020-06-25")
+                        .setCreatedOn("2020-06-25")
+                        .setState(ProjectState.ACTIVE)
+                        .setReleaseRelationNetwork("[\n" +
+                                "  {\n" +
+                                "    \"releaseId\": \"3765276512\",\n" +
+                                "    \"releaseLink\": [\n" +
+                                "      {\n" +
+                                "        \"releaseId\": \"5578999\",\n" +
+                                "        \"releaseLink\": [],\n" +
+                                "        \"releaseRelationship\": \"CONTAINED\",\n" +
+                                "        \"mainlineState\": \"MAINLINE\",\n" +
+                                "        \"comment\": \"Test Comment\",\n" +
+                                "        \"createOn\": \"2022-09-12\",\n" +
+                                "        \"createBy\": \"admin@sw360.org\"\n" +
+                                "      }\n" +
+                                "    ],\n" +
+                                "    \"releaseRelationship\": \"CONTAINED\",\n" +
+                                "    \"mainlineState\": \"MAINLINE\",\n" +
+                                "    \"comment\": \"Test Comment\",\n" +
+                                "    \"createOn\": \"2022-09-12\",\n" +
+                                "    \"createBy\": \"admin@sw360.org\"\n" +
+                                "  }\n" +
+                                "]"));
+        given(this.projectServiceMock.updateProject(any(), any())).willReturn(RequestStatus.SUCCESS);
+
+        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
+        Map<String, Object> project = new HashMap<>();
+        project.put("name", "Test Project Updated");
+        project.put("version", "1.0");
+        project.put("visibility", "PRIVATE");
+        project.put("description", "This is the description of my Test Project");
+        project.put("projectType", ProjectType.PRODUCT.toString());
+
+        List<Map<String, Object>> dependencyNetwork = new ArrayList<>();
+
+        List<Map<String, String>> subLinkedRelease = new ArrayList<>();
+        subLinkedRelease.add(Collections.singletonMap("releaseId", "3765276512"));
+
+        Map<String, Object> releaseLinkJson = new HashMap<>();
+        releaseLinkJson.put("releaseId", "5578999");
+        releaseLinkJson.put("comment", "Test Comment");
+        releaseLinkJson.put("releaseRelationship", "CONTAINED");
+        releaseLinkJson.put("mainlineState", "MAINLINE");
+        releaseLinkJson.put("createBy", "admin@sw360.org");
+        releaseLinkJson.put("createOn", "2022-09-12");
+        releaseLinkJson.put("releaseLink", subLinkedRelease);
+
+        Map<String, Object> subReleaseLinkJson = new HashMap<>();
+        subReleaseLinkJson.put("releaseId", "3765276512");
+        subReleaseLinkJson.put("comment", "Test Comment");
+        subReleaseLinkJson.put("releaseRelationship", "CONTAINED");
+        subReleaseLinkJson.put("mainlineState", "MAINLINE");
+        subReleaseLinkJson.put("createBy", "admin@sw360.org");
+        subReleaseLinkJson.put("createOn", "2022-09-12");
+        subReleaseLinkJson.put("releaseLink", Collections.emptyList());
+
+
+        dependencyNetwork.add(releaseLinkJson);
+        dependencyNetwork.add(subReleaseLinkJson);
+        project.put("dependencyNetwork", dependencyNetwork);
+        project.put("state", ProjectState.ACTIVE.toString());
+        project.put("phaseOutSince", "2020-06-24");
+
+        this.mockMvc.perform(patch("/api/projects/readableFormat/111111111")
+                        .contentType(MediaTypes.HAL_JSON)
+                        .content(this.objectMapper.writeValueAsString(project))
+                        .header("Authorization", "Bearer " + accessToken))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("_embedded.createdBy.email", Matchers.is("admin@sw360.org")))
+                .andDo(this.documentationHandler.document(
+                        requestFields(
+                                fieldWithPath("name").description("The name of the project"),
+                                fieldWithPath("description").description("The project description"),
+                                fieldWithPath("version").description("The version of the new project"),
+                                fieldWithPath("visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
+                                fieldWithPath("projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
+                                fieldWithPath("phaseOutSince").description("The project phase-out date"),
+                                subsectionWithPath("dependencyNetwork").description("Dependency network")
+                        ),
+                        responseFields(
+                                fieldWithPath("name").description("The name of the project"),
+                                fieldWithPath("version").description("The project version"),
+                                fieldWithPath("visibility").description("The project visibility, possible values are: " + Arrays.asList(Visibility.values())),
+                                fieldWithPath("description").description("The project description"),
+                                fieldWithPath("projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
+                                fieldWithPath("securityResponsibles").description("An array of users responsible for security of the project."),
+                                fieldWithPath("enableSvm").description("Security vulnerability monitoring flag"),
+                                fieldWithPath("createdOn").description("Created date of project"),
+                                fieldWithPath("enableVulnerabilitiesDisplay").description("Displaying vulnerabilities flag."),
+                                fieldWithPath("state").description("The project active status, possible values are: " + Arrays.asList(ProjectState.values())),
+                                fieldWithPath("phaseOutSince").description("The project phase-out date"),
+                                subsectionWithPath("dependencyNetwork").description("Release and project dependency network"),
+                                subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
+                                subsectionWithPath("_embedded.createdBy").description("The user who created this project")
+                        )));
+    }
+    private void add_releases(MockHttpServletRequestBuilder requestBuilder) throws Exception {
         List<String> releaseIds = Arrays.asList("3765276512", "5578999", "3765276513");
 
         String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
         this.mockMvc.perform(requestBuilder.contentType(MediaTypes.HAL_JSON)
                 .content(this.objectMapper.writeValueAsString(releaseIds))
-                .header("Authorization", "Bearer " + accessToken)).andExpect(status().isCreated());
-    }
-
-    private void add_patch_releases_with_project_release_relation(MockHttpServletRequestBuilder requestBuilder)
-            throws Exception {
-        ProjectReleaseRelationship projectReleaseRelationship1 = new ProjectReleaseRelationship(
-                ReleaseRelationship.REFERRED, MAINLINE);
-        ProjectReleaseRelationship projectReleaseRelationship2 = new ProjectReleaseRelationship(
-                ReleaseRelationship.STANDALONE, MainlineState.SPECIFIC).setComment("Test Comment 2");
-
-        ImmutableMap<String, ProjectReleaseRelationship> releaseIdToUsage = ImmutableMap
-                .<String, ProjectReleaseRelationship>builder().put("12345", projectReleaseRelationship1)
-                .put("54321", projectReleaseRelationship2).build();
-        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
-        this.mockMvc.perform(requestBuilder.contentType(MediaTypes.HAL_JSON)
-                .content(this.objectMapper.writeValueAsString(releaseIdToUsage))
                 .header("Authorization", "Bearer " + accessToken)).andExpect(status().isCreated());
     }
 
